Closed Bug 579017 Opened 14 years ago Closed 14 years ago

Crash [@ nsSVGAngle::NewValueSpecifiedUnits]

Categories

(Core :: SVG, defect)

x86
Windows 7
defect
Not set
critical

Tracking

()

VERIFIED FIXED
Tracking Status
blocking2.0 --- -
status2.0 --- wanted

People

(Reporter: martijn.martijn, Assigned: longsonr)

References

Details

(Keywords: crash, testcase)

Crash Data

Attachments

(2 files)

Attached image testcase
See testcase, which crashes current trunk build on load.

http://crash-stats.mozilla.com/report/index/bp-1c440876-748b-4dde-9b04-0cbbb2100715
0  	xul.dll  	nsSVGAngle::NewValueSpecifiedUnits  	 content/svg/content/src/nsSVGAngle.cpp:305
1 	xul.dll 	DOMSVGAngle::NewValueSpecifiedUnits 	content/svg/content/src/nsSVGAngle.cpp:94
2 	xul.dll 	NS_InvokeByIndex_P 	xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp:102
3 	xul.dll 	XPC_WN_CallMethod 	js/src/xpconnect/src/xpcwrappednativejsops.cpp:1789
4 	mozjs.dll 	js_Invoke 	js/src/jsinterp.cpp:654
5 	mozjs.dll 	js_Interpret 	js/src/jsops.cpp:2158
6 	mozjs.dll 	js_Execute 	js/src/jsinterp.cpp:854
7 	mozjs.dll 	JS_EvaluateUCScriptForPrincipals 	js/src/jsapi.cpp:4561
8 	xul.dll 	nsJSContext::EvaluateString 	dom/base/nsJSEnvironment.cpp:1786
9 	xul.dll 	nsScriptLoader::EvaluateScript 	content/base/src/nsScriptLoader.cpp:752
10 	xul.dll 	nsScriptLoader::ProcessRequest 	content/base/src/nsScriptLoader.cpp:665
11 	xul.dll 	nsCOMPtr_base::assign_with_AddRef 	obj-firefox/xpcom/build/nsCOMPtr.cpp:89
12 	xul.dll 	nsScriptLoader::ProcessScriptElement 	content/base/src/nsScriptLoader.cpp:614
Blocks: 545042
Attached patch patchSplinter Review
Assignee: nobody → longsonr
Attachment #457589 - Flags: review?(jwatt)
blocking2.0: --- → ?
Attachment #457589 - Flags: review?(jwatt) → review+
pushed http://hg.mozilla.org/mozilla-central/rev/7ec1f3f79ee4
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Verified fixed, using:
Mozilla/5.0 (Windows; Windows NT 6.1; rv:2.0b3pre) Gecko/20100729 Minefield/4.0b3pre
Status: RESOLVED → VERIFIED
Crash Signature: [@ nsSVGAngle::NewValueSpecifiedUnits]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: