Bug 579017 - Fix crash calling nsSVGAngle::NewValueSpecifiedUnits. r=jwatt